# authentication-service

./: .env.sample  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile.toml  README.md  build.rs  env.example  rustfmt.toml
.github/: copilot.yml
.github/workflows/: binaries.yaml  docker.yaml  pre-build.sh
.sqlx/: query-01197da2a4f2bdc22dd14d8ec54903f77813d37e4505c6c9ed8b800f069402c4.json  query-018d279dae3f63d5206d6bb7bfa3b453b2bff3927e2764b085ea3dc3bfd91bc1.json  query-05c63703d427ad55af4c67d43353cd9754a4989b9c5ca0ec1d05a4c381431b2c.json  query-0613b82fef547e9a12e9555e49c867e2b6148b96f65bb2340b144bcc51c86e04.json  query-07f6eea6be281f9336e9bdd78e2d73648b1089e5d44afc9d176bbf1a30d04caf.json  query-0cc7c7a4e0eff9ed5115d9d814b2df3d0f2c098251885ba812475d5ce43c1fc4.json  query-0ebd66b691467e72ea241315c9e039e6c9819e1c4e7bb28709c5c6b7c24c5623.json  query-114bfb2856f89873aa966e7fb862b35732bf82999b9c3ea75203ca718b41e5d9.json  query-12232564f40adba65c3df3d91b3a379bd3c3646ccd9f5dba47005ec222385e45.json  query-13ceb64709c350f4efaa7b70c7c3581261001eedcbf8e7308c8c1a63426821fe.json  query-144687d361a6597c6ddf4c384889da8b6d4e0a063afe245e66a5bf2035473898.json  query-144f326efc7d873920209ee8bb6ede5c48fbf9bd063ebf7d3aec33ca7319bf24.json  query-21ece3409a230a3f7e79035320fc2e89f9e385135a53548b7f4ebe9264d69095.json  query-22c2e10b257eb60c37273a81e1e1da1ffec7bf189d8ae2862b63467e0cb1bb23.json  query-31501c04cb213bc0dab4b5ec0d7aa61cb6edd80c1071732d0b6ec341caa6a342.json  query-381dba2ec84688a7c7c798707ad6c998af89304a2ff04c907d85791379443590.json  query-3b46c97d104bcafd5bc66a6e62253d825b613a7c66c6360b8d864c57cbc1953f.json  query-3b8114ae95bbac84be62f4351cefd7e6d2ece82a68c97399e0c6ce63e56fbbe0.json  query-3bab4351365540640549260de232c77db52da76c87017b32033004dc915b34f8.json  query-402d86eddde8021aa94c25c52a8cc12aee6bb39bb6f11a68e2867ef772ade44f.json  query-4060b322eb25066ab3fe81da1afc55667f443f6db7f15a90f1053e92bdd68b5d.json  query-424d6dd2d8bd4681f8ab0b79205355ad45d09a2976cb05d22b22b78fa8ad150d.json  query-455f368947cbfd5a66718a6b60cd2a7e1562f166cc3de88b42935523356881e2.json  query-45cdf44b0f87b9e1d82e1f780ed0068d6ca870a2c72c49547af00837dcc83fd1.json  query-48ea445ace807274fa63b5f266044399870ac227d1bc25fb4c70e30fca7b96f0.json  query-4de734415d2913f2838cb7150742396b4cf6f19dc8436e8d29ddc6961952d930.json  query-5187a49dc1002a27ab7ab8522259854acb78796b3bea86cb87b14a2b3dd43536.json  query-583539dc1a89534c7d3f518e5dcbab94889e9d3a2b3b185a2bc46ec12ec2bc83.json  query-5a1b8ceb95ea67dff85a2bb8e38869f374a30b54cb69c069626501831c88ef73.json  query-5b9dede8490dab30d723d9e09409747e8d7486befd3981e252602413bb9a95c6.json  query-5bd7d72f3837ac4912923d724982bad7c250ddad6fe9db3eabe794348ac1b151.json  query-5f43df5d56d0272974afda3981fe8769c0fddbf1598d82ada63b45de63ff4c36.json  query-602f339c5f18c619e41d43a9232911a011f7bfa3debec5ff10b299cd1274754e.json  query-60a7835fe33969cd78ad4574fc04053c2512a7707f94ac667e5c4a5e9cf72df3.json  query-61d9f0229f3b55674553cc865b62f734f315c6481c2e329f9986eff6eec83dcc.json  query-685309c2462a7e1e249d250eb1113d5ee0f75af7c6b4f9e0bd715f77f72bdd1e.json  query-6ac4abeca53fcaea00c5a76dfbdf9c6a264d0def6f30b095eb56f90eb040a4ad.json  query-78904fdc12130c9b508fc68b9ca981105df5184e328dc2ac5a9e4d9c9269703c.json  query-7902fe6fa99b5c3d3482fcac1bf6d4c8470d516d499dd7fe65079e651acac7c6.json  query-7c15fadb0c2666d307c97ba1c9db8c535ef5e5f19d34fc7fe2ed2bc0217fa104.json  (+22 more)
configuration/: default.yaml  development.yaml  production.yaml
database/: drop_all_tables.sql  users_dev_dummy_data.sql
database_queries/: drop_all_tables.sql  users_dev_dummy_data.sql
docker-compose/postgres/: docker-compose.yaml
docker/authentication/: docker-compose.yaml
docker/postgres/: docker-compose.yaml
docs/: COPILOT_PROMPTS.md
migrations/: 00000000000_postgres_extensions.sql  00000000001_create_users_table.sql  00000000002_create_refresh_token_table.sql  00000000002_create_sessions_table.sql  00000000003_create_email_verification_table.sql  00000000003_create_logins_table.sql  00000000004_create_password_reset_table.sql  0001_create_users_table.sql
proto/: auth.proto  authentication.proto  common.proto  ledger.proto  refresh_tokens.proto  user.proto  users.proto  utilities.proto
src/: configuration.rs  error.rs  lib.rs  main.rs  prelude.rs  reflections.rs  router.rs  rpc.rs  startup.rs  telemetry.rs
src/database/: mod.rs
src/database/email_verification/: delete.rs  insert.rs  mod.rs  model.rs  read.rs  update.rs
src/database/logins/: delete.rs  insert.rs  mod.rs  model.rs  read.rs  update.rs
src/database/refresh_token/: create.rs  delete.rs  insert.rs  mod.rs  model.rs  read.rs  update.rs
src/database/refresh_tokens/: delete.rs  insert.rs  mod.rs  model.rs  read.rs  update.rs
src/database/sessions/: delete.rs  insert.rs  mod.rs  model.rs  read.rs  update.rs
src/database/users/: create.rs  delete.rs  insert.rs  mod.rs  model.rs  read.rs  update.rs
src/domain/: access_token.rs  email_address.rs  jwt_token.rs  mod.rs  password_hash.rs  refresh_token.rs  row_id.rs  token_claim.rs  user_name.rs  user_role.rs
src/domain/tokens/: claim.rs  email_verification.rs  mod.rs  token_type.rs
src/domains/: access_token.rs  email_address.rs  mod.rs  password.rs  password_hash.rs  refresh_token.rs  token_claim.rs  user_name.rs
src/middleware/: access_token.rs  authentication.rs  authorisation.rs  mod.rs  refresh_token.rs  token_interceptor.rs
src/rpc/: ledger.rs  mod.rs  reflections.rs  users.rs  utilities.rs
src/services/: auth.rs  authentication.rs  logins.rs  mod.rs  reflections.rs  refresh_tokens.rs  sessions.rs  users.rs  utilities.rs
src/utilities/: jwt.rs  mod.rs
src/utils/: metadata.rs  mock_uuid.rs  mod.rs
tests/api/: README.md  authentication.rs  main.rs  users.old.rs  utilities.rs
tests/api/authentication/: login.rs  logout.rs  mod.rs  refresh.rs  update_password.rs
tests/api/helpers/: mocks.rs  mod.rs  random_uuid.rs  spawn.rs
tests/backend/: helpers.rs  main.rs  ping.rs
tests/integration/: authentication.rs  helpers.rs  main.rs  ping.rs  users.rs  utilities.rs
(+21 files in other folders)
