[package]
name = "personal_ledger_backend"
authors = ["Ian Teda <ian@teda.id.au>"]
version = "0.1.0"
edition = "2021"
description = "The backend for Personal Ledger"
documentation = "https://github.com/IanTeda/personal_ledger_backend"
homepage = "https://github.com/IanTeda/personal_ledger_backend"
repository = "https://github.com/IanTeda/personal_ledger_backend"
readme = "README.md"
license-file = "LICENSE.txt"
keywords = ["rust", "grpc", "finance"]

[workspace.lints.rust]
unsafe_code = "forbid"

[lib]
doctest = false
path = "src/lib.rs"

[[bin]]
name = "personal_ledger_backend"
path = "src/main.rs"

[dependencies]
config = { version = "0.14.0", default-features = false, features = ["yaml"] }
chrono = { version = "0.4.22", default-features = false, features = [
    "clock",
    "serde",
] }
prost = "0.13"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.198", features = ["derive"] }
serde-aux = { version = "4.5.0" }
serde_json = "1.0.108"
sqlx = { version = "0.7.4", features = [
    "chrono",
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
] }
strum = { version = "0.26", features = ["derive"] }
thiserror = "1"
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = "0.1"
tonic = { version = "0.12.0", features = ["tls"] }
tonic-reflection = "0.12.0"
tracing = { version = "0.1" }
tracing-actix-web = "0.7"
tracing-bunyan-formatter = { version = "0.3" }
tracing-log = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "json",
    "registry",
] }
unicode-segmentation = "1.11.0"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
validator = { version = "0.18", features = ["derive"] }
derive_more = "0.99.18"
argon2 = "0.5.3"
telemetry = "0.1.3"
rand = "0.8.5"
jsonwebtoken = "9.3.0"
once_cell = "1.19.0"
time = "0.3.36"

[build-dependencies]
tonic-build = { version = "0.12", features = ["prost"] }

[dev-dependencies]
claims = "0.7.0"
fake = { version = "2.9.2", features = [
    "derive",
    "chrono-tz",
    "uuid",
    "chrono",
] }
