[package]
name = "authentication_service"
authors = ["Ian Teda <ian@teda.id.au>"]
version = "0.1.2"
edition = "2021"
description = "A microservice for handling application authentication and sessions."
documentation = "https://github.com/IanTeda/authentication_service"
homepage = "https://github.com/IanTeda/authentication_service"
repository = "https://github.com/IanTeda/authentication_service"
readme = "README.md"
license-file = "LICENSE.txt"
keywords = ["rust", "authentication", "microservice", "grpc", "tonic"]

[workspace.lints.rust]
unsafe_code = "forbid"

[lib]
doctest = false
path = "src/lib.rs"

[[bin]]
name = "authentication_service"
path = "src/main.rs"

[dependencies]
config = { version = "0.15.1", default-features = false, features = ["yaml"] }
chrono = { version = "0.4.22", default-features = false, features = [
    "clock",
    "serde",
] }
prost = "0.13"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.198", features = ["derive"] }
serde-aux = { version = "4.5.0" }
serde_json = "1.0.108"
sqlx = { version = "0.8.0", features = [
    "chrono",
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
] }
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = "0.1"
tonic = { version = "0.13.0", features =["tls-ring"] }
tonic-reflection = "0.13.0"
tonic-web = "0.13.0"
tracing = { version = "0.1" }
tracing-log = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "registry",
] }
unicode-segmentation = "1.11.0"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
validator = { version = "0.20", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["from"] }
argon2 = "0.5.3"
telemetry = "0.1.3"
rand = "0.9.0"
jsonwebtoken = "9.3.0"
once_cell = "1.19.0"
time = "0.3.36"

cookie = "0.18.1"
http = "1.3.1"
serde_with = "3.12.0"
tower-layer = "0.3.3"
tower = "0.5.2"
tower-http = { version="0.6.2", features = [
    "cors",
    "trace",
] }

[build-dependencies]
tonic-build = { version = "0.13", features = ["prost"] }

[dev-dependencies]
claims = "0.8.0"
fake = { version = "4.2.0", features = [
    "derive",
    "chrono-tz",
    "uuid",
    "chrono",
] }
